        (1) ANOVA table of class "anova", is printed via nice.anova
        (2) ANOVA fitted with base R's aov (can be passed to lsmeans 
            for post-hoc tests)
        (3) output from car::Anova (for tests of effects),
            ANOVA table (1) is based on this model
        (4) lm object passed to car::Anova
        (5) data used for estimating (2) and (4)
        
    o   support for lsmeans: objects of class afex_aov can be used 
        with lsmeans directly. afex now depends on lsmeans.
    
    o   added afex.options() functionality for setting options globally.
    
    o   added vignette showing how to calculate contrasts after ANOVA.
    
    o   afex does not depend on car package anymore, is is only imported.

        
    Bugfixes
    
    o   ANOVA: for "aov"-objects, contrasts are only set for factors.
    

    

                    *************************
                    ** afex VERSION 0.13-x **
                    *************************
                    
                    Changes in afex Version 0.13-x
                    Released January 2015

    Significant User Visible Changes and New Features

    o   added ems() function for deriving the expected values of the 
        mean squares for factorial designs (contributed by Jake 
        Westfall).

        
    Bugfixes
    
    o   aov.car et al. stop with error message if a factor has only one
        level.
        
    o   aov.car transforms id variable to factor which ensures that 
        return = "aov" provides equivalent results.
        
    o   changed regex for detecting "observed" variables to work with 
        the new version of stringr which uses stringi.
    



                    *************************
                    ** afex VERSION 0.12-x **
                    *************************
                    
                    Changes in afex Version 0.12-x
                    Released November 2014
