@@ -19,6 +19,7 @@ export(compare.2.vectors)
 export(ems)
 export(ez.glm)
 export(mixed)
+export(nice.anova)
 export(nice_anova)
 export(round_ps)
 export(set_default_contrasts)
