@@ -25,3 +25,9 @@ aov4 <- function(...) {
   .Deprecated("aov_4", "afex", "aov4 was renamed to aov_4 and is now deprecated.")
   aov_4(...)
 }
+#' @rdname deprecated
+#' @export
+nice.anova <- function(...) {
+  .Deprecated("nice_anova", "afex", "nice.anova was renamed to nice_anova and is now deprecated.")
+  nice_anova(...)
+}
